--- a/public/templates/email.html
+++ b/public/templates/email.html
@@ -5,28 +5,29 @@
 <head>
     <meta charset="utf-8">
     <title>Send an email</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/email.css">
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <script src="/static/js/jquery-1.7.2.js"></script>
+    {% include "include/rascal-head.html" %}
+    <link rel="stylesheet" type="text/css" href="static/css/email.css">
 </head>
 <body>
-    <div class="rascalcontent">
-        <h1>Send an Email</h1>
-        <p>Enter the sender and recipient email addresses, the subject and a message in the box:</p>
-        <div style="margin: 0; line-height: 0.8em">
-            Sender:<br />
-            <input type="text" class="email-input" id="sender" value="{{ sender }}"/><br />
-            Recipients:<br />
-            <input type="text" class="email-input" id="recipients" /><br />
-            Subject:<br />
-            <input type="text" class="email-input" id="subject" /><br />
+    {% include "include/rascal-topbar.html" %}
+    <div class="container">
+        <div class="well rascal">
+            <h1>Send an Email</h1>
+            <p>Enter the sender and recipient email addresses, the subject and a message in the box:</p>
+            <div style="margin: 0; line-height: 0.8em">
+                Sender:<br />
+                <input type="text" class="email-input" id="sender" value="{{ sender }}"/><br />
+                Recipients:<br />
+                <input type="text" class="email-input" id="recipients" /><br />
+                Subject:<br />
+                <input type="text" class="email-input" id="subject" /><br />
+            </div>
+            <textarea rows="6" cols="40" class="email-body" id="email-body"></textarea><br />
+            
+            <input id="send-email" type="button" value="Send Email" class="btn btn-large btn-danger rascal" />
+            <input id="clear-form" type="button" value="Clear Form" class="btn btn-large btn-info rascal" />
+            <div id="result">{{ help }}</div>
         </div>
-        <textarea rows="6" cols="40" class="email-body" id="email-body"></textarea><br />
-        
-        <input id="send-email" type="button" value="Send Email" class="large red awesome" />
-        <input id="clear-form" type="button" value="Clear Form" class="large blue awesome" />
-        <div id="result">{{ help }}</div>
     </div>
     
     <script language="javascript" type="text/javascript">
