--- a/public/static/css/album.css
+++ b/public/static/css/album.css
@@ -1,10 +1,7 @@
-/*Adjust demo.css*/
-body {
-    margin: 0.5em;
-}
-
-.rascalcontent {
-    width: 710px;
+div.album {
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #frame {
