--- a/public/static/css/email.css
+++ b/public/static/css/email.css
@@ -3,27 +3,24 @@ body {
     margin: 0.5em;
 }
 
-.rascalcontent {
-    width: 710px;
-}
-
 .email-input {
     border: 2px solid #E7E8E9;
+    color: #FFFFFF;
     background-color: #111111;
     width: 25em;
     font-family:'Courier', sans-serif;
     font-size: 1em;
     margin-top: 10px;
     margin-bottom: 20px;
-    color: #FFFFFF;
 }
 
 .email-body {
     border: 3px solid #E7E8E9;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    color: #FFFFFF;
+    background-color: #111111;
+    width: 25em;
     font-family: 'Courier', sans-serif;
     font-size: 1.25em;
-    background-color: #111111;
-    color: #FFFFFF;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
