--- a/public/templates/hello.html
+++ b/public/templates/hello.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<!-- 12 May 2012 dsmall but needs to tested on Rascal -->
-<html>
+<!-- 20 Jun 2012 dsmall -->
+<html lang="en">
 <head>
-    <meta charset="utf-8">
     <title>Hello World</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <script src="/static/js/jquery-1.7.2.js"></script>
-    <style>
-        body {
-            margin: 0.5em;
-        }
-    </style>
+    {% include "include/rascal-head.html" %}
 </head>
 <body>
-    <div class="rascalcontent">
-        <h1>hello world</h1>
-        <input id="flash_led" type="button" value="Flash LED" class="large red awesome" />
-        <span id="message"></span>
+    {% include "include/rascal-topbar.html" %}
+    <div class="container">
+        <div class="well rascal">
+            <h1>hello world</h1>
+            <p>&nbsp;</p>
+            <input id="flash_led" type="button" value="Flash LED" class="btn btn-large btn-danger rascal" />
+            <span id="message"></span>
+        </div>
     </div>
     <script type="text/javascript">
         $("#flash_led").click(function () {
