Minor fix to editor font size (possible bootstrap 2.0.4 issue)

--- a/public/static/css/email.css
+++ b/public/static/css/email.css
@@ -9,7 +9,7 @@ body {
     background-color: #111111;
     width: 25em;
     font-family:'Courier', sans-serif;
-    font-size: 1em;
+    font-size: 1em !important;
     margin-top: 10px;
     margin-bottom: 20px;
 }
